fixed featured cards spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,9 +82,9 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 4px;
 }
 
-.featured-card {
+/* .featured-card {
     margin: 0 auto;
-}
+} */
 
 .card-img {
     height: 175px;
